        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6.-1. (2018-03-12) -
-------------------------------------------------------

MAJOR UPDATES

MINOR UPDATES
  o Hexbin was added into footer.

---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6 (2018-03-01) -
---------------------------------------------------

MAJOR UPDATES

  o UI for DIF/Fairness section was updated.
  o References were added into About page.
  o New design of reports is now available. Design of PDF reports was
    updated.
  o Wording in report was improved.
  o DIF/Fairness section in report was improved.
  o New hexbin for ShinyItemAnalysis was created and added into reports.
  o Sample code in DIF/Fairness IRT Lord and IRT Raju was extended to
    1PL, 2PL and 3PL models.
  o Bugs fixing
      - Wording in regression plots was fixed.
      - Examples in DIF/Fairness IRT Lord and IRT Raju were fixed.
      - Function 'plotDIFirt()' now can be also used for only one item.


MINOR UPDATES

  o Reference list was updated.
  o CITATION file was modified.
  o In Summary page the description for summary table was added. The sample
    code was updated.
  o Wording in summary statistics in Summary section was improved.
  o Description of Session info section in reports was added.


---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.5 (2017-11-14) -
---------------------------------------------------

MAJOR UPDATES

  o Correlation plots now offer reordering by hierarchical clustering.
    Several linkage methods are offered. This is also included in reports.
  o Confirmation of data upload was added. Also warnings and errors are
    displayed in case that something went wrong when uploading.
  o In IRT training