@@ -1,7 +1,7 @@
-@media (min-width: 1051px) {
+@media (min-width: 1367px) {
 
     body {
-      padding-top:110px;
+      padding-top:70px;
       padding-left:80px;
       padding-right:80px;
       padding-bottom:80px;
@@ -9,10 +9,10 @@
 
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1366px) {
 
     body {
-      padding-top:150px;
+      padding-top:120px;
       padding-left:80px;
       padding-right:80px;
       padding-bottom:80px;
@@ -30,19 +30,19 @@
 
     .container {
       padding:0;
-      margin:0;      
+      margin:0;
     }
 
     body {
       padding:0;
       padding-top:150px;
     }
-    
+
     .clear{
       clear:both;
       height:130px;
     }
-        
+
     .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
       margin-left:0;
       margin-right:0;
